--- a/public/i18n/zh_CN.yaml
+++ b/public/i18n/zh_CN.yaml
@@ -3,6 +3,10 @@ src_dataquery_componentsts:
 src_dataquery_editorts:
   onlydesktop: 仅在桌面环境下支持在代码编辑器中打开
 src_setting_indexts:
+  api_interface: 📃 API 接口
+  apitypedefinition: 'API 接口的类型定义，请参考:'
+  defaultcolumnsofdataviewtable: 当调用 DataView.table 时, 默认显示的列, 以逗号分隔; 留空则表示显示所有列
   local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code {{filepath}}" 代表使用 VSCode 打开, 其中 {{filepath}}
     在运行时会被替换为真实的代码文件
-  open_local_editor: 打开本地编辑器
+  open_local_editor: ✒️ 打开本地编辑器
+  table_default_columns: 🔑 表格视图默认显示列
