--- a/public/i18n/zh_CN.yaml
+++ b/public/i18n/zh_CN.yaml
@@ -1,3 +1,12 @@
+src_core_editorts:
+  ext_code_editor_closed: 外部代码编辑器进程 {0} 已关闭
+  show_as_template_format: 显示为模板格式
+  show_embedded_block_code_in_siyuan_template_format: 以思源模板的格式显示嵌入块代码
+  unableto_use_ext_cmd: 无法使用外部编辑器命令 {0}, 请检查命令的正确性
+  unableto_use_external_editor_cmd: 无法使用外部编辑器命令 {0}, 请检查命令的正确性
+  unusableexteditorcmd: 无法使用外部编辑器命令 {0}, 请检查命令的正确性
+src_core_indexts:
+  custom_queryview_error: '注意: 自定义的 QueryView 脚本格式存在问题，无法正常导入!'
 src_dataquery_componentsts:
   mermaid_render_failed: Mermaid 渲染失败, 请检查代码
 src_dataquery_editorts:
@@ -6,7 +15,13 @@ src_setting_indexts:
   api_interface: 📃 API 接口
   apitypedefinition: 'API 接口的类型定义，请参考:'
   defaultcolumnsofdataviewtable: 当调用 DataView.table 时, 默认显示的列, 以逗号分隔; 留空则表示显示所有列
+  import_failed: 导入失败, 详细情况请检查控制台报错
+  import_success: 导入成功, 共 {cnt} 个自定义视图
   local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code {{filepath}}" 代表使用 VSCode 打开, 其中 {{filepath}}
     在运行时会被替换为真实的代码文件
   open_local_editor: ✒️ 打开本地编辑器
+  reload: 重新加载
   table_default_columns: 🔑 表格视图默认显示列
+  user_custom_view: 用户自定义视图
+  user_self_written_view: 用户自行编写的 View 组件, 存放在 '/data/public/custom-query-view.js'
+    下
