--- a/public/i18n/zh_CN.yaml
+++ b/public/i18n/zh_CN.yaml
@@ -1,5 +1,6 @@
 src_core_editorts:
   ext_code_editor_closed: 外部代码编辑器进程 {0} 已关闭
+  forbiddentoupdateblockdata: 同步中, 无法写入块数据
   show_as_template_format: 显示为模板格式
   show_embedded_block_code_in_siyuan_template_format: 以思源模板的格式显示嵌入块代码
   unableto_use_ext_cmd: 无法使用外部编辑器命令 {0}, 请检查命令的正确性
@@ -19,7 +20,8 @@ src_setting_indexts:
   echarts_renderer_option: Echarts 渲染器，可以为 "canvas" 或 "svg", 默认 "svg"
   import_failed: 导入失败, 详细情况请检查控制台报错
   import_success: 导入成功, 共 {cnt} 个自定义视图
-  local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code -w {{filepath}}" 代表使用 VSCode 打开, 其中 {{filepath}} 在运行时会被替换为真实的代码文件
+  local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code -w {{filepath}}" 代表使用 VSCode 打开, 其中
+    {{filepath}} 在运行时会被替换为真实的代码文件
   open_local_editor: ✒️ 打开本地编辑器
   reload: 重新加载
   table_default_columns: 🔑 表格视图默认显示列
