--- a/public/i18n/zh_CN.yaml
+++ b/public/i18n/zh_CN.yaml
@@ -20,14 +20,12 @@ src_setting_indexts:
   echarts_renderer_option: Echarts 渲染器，可以为 "canvas" 或 "svg", 默认 "svg"
   import_failed: 导入失败, 详细情况请检查控制台报错
   import_success: 导入成功, 共 {cnt} 个自定义视图
-  local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code -w {{filepath}}" 代表使用 VSCode 打开, 其中
-    {{filepath}} 在运行时会被替换为真实的代码文件
+  local_command_desc: 本地用于打开代码编辑器的命令, 默认为 "code -w {{filepath}}" 代表使用 VSCode 打开, 其中 {{filepath}} 在运行时会被替换为真实的代码文件
   open_local_editor: ✒️ 打开本地编辑器
   reload: 重新加载
   table_default_columns: 🔑 表格视图默认显示列
   user_custom_view: 用户自定义视图
-  user_self_written_view: 用户自行编写的 View 组件, 存放在 '/data/public/custom-query-view.js'
-    下
+  user_self_written_view: 用户自行编写的 View 组件, 存放在 '/data/public/custom-query-view.js' 下
 src_userhelp_examplests:
   backlinks_table: 以表格的形式显示当前文档的回链
   daily_quote: 每日一句，这个案例中用到了 state，所以每天只会显示一条句子；不过注意这个例子中用到了随便从网上找到 API，不一定稳定，当个案例看看就行
@@ -40,7 +38,7 @@ src_userhelp_examplests:
   recent_docs: 展示最近更新的 32 篇文档，这个案例中使用了思源的超级块的 markdown 方言语法，用于在同一个列表项中横向展示多列的信息
   simple_chatgpt: 一个非常简单的 ChatGPT 对话框，使用思源内部设置的 GPT API
   sql_exec_result: 在输入框中输入 SQL 语句，点击执行按钮，将执行结果以表格的形式展示
-  updated_docs_today: |
+  updated_docs_today: >
     查询今天更新的所有文档，并以列表的形式展示；这个案例中使用了 state，今天之后将不会再更新表格而只会显示缓存的记录。
     实际使用过程中，其实更加建议配合模板使用，在创建的时候直接配置 now 为当天的日期，而非通过 state 来维护日期状态。
   view_assets_images: 分页查看 assets 目录下所有的图片
