⚡️ 优化 columns 和 rows

--- a/public/i18n/en_US.yaml
+++ b/public/i18n/en_US.yaml
@@ -1,3 +1,5 @@
+src_core_dataviewts:
+  blank: Blank
 src_core_editorts:
   ext_code_editor_closed: The external code editor process {0} has been closed
   show_as_template_format: Display as template format
