--- a/public/i18n/zh_CN.yaml
+++ b/public/i18n/zh_CN.yaml
@@ -14,6 +14,9 @@ src_dataquery_componentsts:
   mermaid_render_failed: Mermaid 渲染失败, 请检查代码
 src_dataquery_editorts:
   onlydesktop: 仅在桌面环境下支持在代码编辑器中打开
+src_indexts:
+  incompatible_version: 当前思源版本 v3.1.25 和 QueryView 插件不兼容，建议降级或升级思源到另一个版本
+  plugin_not_working: QueryView 插件无法正常运行
 src_setting_indexts:
   api_interface: 📃 API 接口
   apitypedefinition: 'API 接口的类型定义，请参考:'
